--- a/assets/style.css
+++ b/assets/style.css
@@ -23,7 +23,7 @@ body {
 
 h1 {
   font-family: 'Averia Serif Libre', cursive;
-  font-size: 50px;
+  font-size: 72px;
   font-weight: bold;
   margin-bottom: -20px;
   color: var(--darkWoodland);
@@ -43,7 +43,7 @@ h1 {
 
 .header {
     padding-top: 50px;
-    background-color: #cacaca;
+    background-color: #d7dddb;
     text-align: center;
     padding-bottom: 50px;
 }
@@ -124,7 +124,7 @@ h1 {
 }
 
 .returnBtn {
-  margin-left: 200px;
+  margin-left: 6%;
 }
 
 .park-cards .tile {
@@ -151,11 +151,11 @@ h1 {
 }
 
 .park-data {
-  margin: 10px 150px 10px 150px;
+  margin: 3%;
 }
 
 .park-data .tile {
-  padding: 10px 50px 10px 50px;
+  padding: 3%;
 }
 
 .park-data h4 {
@@ -165,15 +165,15 @@ h1 {
 }
 
 .park-data img {
-  height: 450px;
+  width: 100%;
   border-radius: 10px;
 }
 
 .nearby-food .tile {
   background-color: beige;
   border-radius: 10px;
-  margin: 25px 150px 25px 150px;
-  padding: 10px 50px 10px 50px;
+  margin: 3%;
+  padding: 3%;
 }
 
 .cuisine {
@@ -182,12 +182,12 @@ h1 {
 
 footer {
   padding-top: 25px;
-  background-color: #cacaca;
+  /* background-color: #cacaca; */
   text-align: center;
   height: 125px;
 }
 
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 1023px) {
   h4 {
     text-align: center;
   }
@@ -199,8 +199,4 @@ footer {
     width: 50%;
   }
 
-  svg {
-    width: 306 !important;
-    height: 206 !important;
-  }
 }
