--- a/assets/style.css
+++ b/assets/style.css
@@ -43,7 +43,7 @@ h1 {
 
 .header {
     padding-top: 50px;
-    background-color: #d7dddb;
+    background-color: #e2e4e3;
     text-align: center;
     padding-bottom: 50px;
 }
@@ -79,10 +79,6 @@ h1 {
   background-color: white;
   height: 700px;
   position: relative;
-}
-
-.cards {
-    background-color: rgb(207, 237, 238);
 }
 
 .map-select {
@@ -124,13 +120,14 @@ h1 {
 }
 
 .returnBtn {
+  margin-top: 3%;
   margin-left: 6%;
 }
 
 .park-cards .tile {
   padding: 3%;
   border-radius: 50px;
-  background-color: beige;
+  background-color: #e2e4e3;
   margin: 3%;
 }
 
@@ -161,7 +158,7 @@ h1 {
 .park-data h4 {
   font-size: 32px;
   font-weight: 600;
-  padding-bottom: 10px;
+  padding-bottom: 20px;
 }
 
 .park-data img {
@@ -170,7 +167,7 @@ h1 {
 }
 
 .nearby-food .tile {
-  background-color: beige;
+  background-color: #e2e4e3;
   border-radius: 10px;
   margin: 3%;
   padding: 3%;
@@ -182,7 +179,7 @@ h1 {
 
 footer {
   padding-top: 25px;
-  /* background-color: #cacaca; */
+  background-color: #e2e4e3;
   text-align: center;
   height: 125px;
 }
